[package]
name = "haproxy_dataplane_client"
version = "0.1.0"
authors = ["Wilco Vogt <wilco@newkings.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "~0.9"
base64 = "~0.10"
serde = "~1.0"
serde_json = "~1.0"